<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SplashScreenFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="162dp"
        android:layout_gravity="center"
        android:layout_marginTop="490dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_login"
            android:layout_width="112dp"
            android:layout_height="60dp"
            android:layout_above="@+id/button_register_google"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/navigate_signup"
            android:layout_width="112dp"
            android:layout_height="60dp"
            android:layout_above="@+id/button_register_google"
            android:layout_alignStart="@id/button_login"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/register"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button_register_google"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/sign_in_with_google"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="80dp">
        <TextView
            android:id="@+id/by_agreeing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="By signing up you agree to our"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/policy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/by_agreeing"
            android:textAlignment="center"
            android:text="Terms and Conditions and Privacy Policy"
            android:textSize="12sp" />
    </RelativeLayout>
</LinearLayout>