<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignInFragment">


<!--    <Button-->
<!--        android:id="@+id/navigate_signup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginEnd="35dp"-->
<!--        android:layout_weight="1"-->
<!--        android:text="@string/register"-->
<!--        android:textAlignment="center"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="12sp"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"-->
<!--        app:layout_constraintStart_toEndOf="@+id/button_login"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />-->


    <Button
        android:id="@+id/button_login"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:baselineAligned="false"
        android:hint="@string/password"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/email_layout"
        app:layout_constraintStart_toStartOf="@+id/email_layout"
        app:layout_constraintTop_toBottomOf="@+id/email_layout"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInputText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:baselineAligned="false"
        android:hint="@string/email"
        android:textColorHint="@android:color/darker_gray"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInput_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign In Here"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>